antout/equelParser.py
# Generated from equelParser.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class equelParser ( Parser ):

    grammarFileName = "equelParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'as'", "'agg'", "'postproc'", 
                     "'output'", "'|'", "<INVALID>", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "'['", 
                     "','", "']'" ]

    symbolicNames = [ "<INVALID>", "QueryStringChar", "AS", "AGG", "POSTPROC", 
                      "OUTPUT", "Separator", "RParS", "Equals", "PrefixChar", 
                      "Identifier", "WS", "VWS", "LParS", "LParL", "LSep", 
                      "RParL", "SingleQuotedValue", "DoubleQuotedValue", 
                      "UnquotedValue" ]

    RULE_equel = 0
    RULE_verb = 1
    RULE_genericExpr = 2
    RULE_searchExpr = 3
    RULE_queryString = 4
    RULE_firstExpr = 5
    RULE_filterExpr = 6
    RULE_aggregationExpr = 7
    RULE_postprocExpr = 8
    RULE_outputExpr = 9
    RULE_shortcutExpr = 10
    RULE_parameter = 11
    RULE_name = 12
    RULE_value = 13

    ruleNames =  [ "equel", "verb", "genericExpr", "searchExpr", "queryString", 
                   "firstExpr", "filterExpr", "aggregationExpr", "postprocExpr", 
                   "outputExpr", "shortcutExpr", "parameter", "name", "value" ]

    EOF = Token.EOF
    QueryStringChar=1
    AS=2
    AGG=3
    POSTPROC=4
    OUTPUT=5
    Separator=6
    RParS=7
    Equals=8
    PrefixChar=9
    Identifier=10
    WS=11
    VWS=12
    LParS=13
    LParL=14
    LSep=15
    RParL=16
    SingleQuotedValue=17
    DoubleQuotedValue=18
    UnquotedValue=19

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class EquelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def firstExpr(self):
            return self.getTypedRuleContext(equelParser.FirstExprContext,0)


        def Separator(self, i:int=None):
            if i is None:
                return self.getTokens(equelParser.Separator)
            else:
                return self.getToken(equelParser.Separator, i)

        def searchExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.SearchExprContext)
            else:
                return self.getTypedRuleContext(equelParser.SearchExprContext,i)


        def AGG(self):
            return self.getToken(equelParser.AGG, 0)

        def aggregationExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.AggregationExprContext)
            else:
                return self.getTypedRuleContext(equelParser.AggregationExprContext,i)


        def POSTPROC(self):
            return self.getToken(equelParser.POSTPROC, 0)

        def postprocExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.PostprocExprContext)
            else:
                return self.getTypedRuleContext(equelParser.PostprocExprContext,i)


        def OUTPUT(self):
            return self.getToken(equelParser.OUTPUT, 0)

        def outputExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.OutputExprContext)
            else:
                return self.getTypedRuleContext(equelParser.OutputExprContext,i)


        def getRuleIndex(self):
            return equelParser.RULE_equel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquel" ):
                listener.enterEquel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquel" ):
                listener.exitEquel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquel" ):
                return visitor.visitEquel(self)
            else:
                return visitor.visitChildren(self)




    def equel(self):

        localctx = equelParser.EquelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_equel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.firstExpr()
            self.state = 33
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 29
                    self.match(equelParser.Separator)
                    self.state = 30
                    self.searchExpr() 
                self.state = 35
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 46
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 36
                self.match(equelParser.Separator)
                self.state = 37
                self.match(equelParser.AGG)
                self.state = 38
                self.aggregationExpr()
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 39
                        self.match(equelParser.Separator)
                        self.state = 40
                        self.aggregationExpr() 
                    self.state = 45
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)



            self.state = 58
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(equelParser.Separator)
                self.state = 49
                self.match(equelParser.POSTPROC)
                self.state = 50
                self.postprocExpr()
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        self.match(equelParser.Separator)
                        self.state = 52
                        self.postprocExpr() 
                    self.state = 57
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)



            self.state = 70
            _la = self._input.LA(1)
            if _la==equelParser.Separator:
                self.state = 60
                self.match(equelParser.Separator)
                self.state = 61
                self.match(equelParser.OUTPUT)
                self.state = 62
                self.outputExpr()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==equelParser.Separator:
                    self.state = 63
                    self.match(equelParser.Separator)
                    self.state = 64
                    self.outputExpr()
                    self.state = 69
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VerbContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(equelParser.Identifier, 0)

        def getRuleIndex(self):
            return equelParser.RULE_verb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerb" ):
                listener.enterVerb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerb" ):
                listener.exitVerb(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerb" ):
                return visitor.visitVerb(self)
            else:
                return visitor.visitChildren(self)




    def verb(self):

        localctx = equelParser.VerbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_verb)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(equelParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GenericExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return equelParser.RULE_genericExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ShortcutContext(GenericExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.GenericExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def shortcutExpr(self):
            return self.getTypedRuleContext(equelParser.ShortcutExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShortcut" ):
                listener.enterShortcut(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShortcut" ):
                listener.exitShortcut(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortcut" ):
                return visitor.visitShortcut(self)
            else:
                return visitor.visitChildren(self)


    class GenericContext(GenericExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.GenericExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def verb(self):
            return self.getTypedRuleContext(equelParser.VerbContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.ParameterContext)
            else:
                return self.getTypedRuleContext(equelParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneric" ):
                listener.enterGeneric(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneric" ):
                listener.exitGeneric(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGeneric" ):
                return visitor.visitGeneric(self)
            else:
                return visitor.visitChildren(self)



    def genericExpr(self):

        localctx = equelParser.GenericExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_genericExpr)
        self._la = 0 # Token type
        try:
            self.state = 82
            token = self._input.LA(1)
            if token in [equelParser.Identifier]:
                localctx = equelParser.GenericContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.verb()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==equelParser.Identifier or _la==equelParser.LParL:
                    self.state = 75
                    self.parameter()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [equelParser.PrefixChar]:
                localctx = equelParser.ShortcutContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.shortcutExpr()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SearchExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def genericExpr(self):
            return self.getTypedRuleContext(equelParser.GenericExprContext,0)


        def getRuleIndex(self):
            return equelParser.RULE_searchExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearchExpr" ):
                listener.enterSearchExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearchExpr" ):
                listener.exitSearchExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSearchExpr" ):
                return visitor.visitSearchExpr(self)
            else:
                return visitor.visitChildren(self)




    def searchExpr(self):

        localctx = equelParser.SearchExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_searchExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.genericExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryStringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QueryStringChar(self, i:int=None):
            if i is None:
                return self.getTokens(equelParser.QueryStringChar)
            else:
                return self.getToken(equelParser.QueryStringChar, i)

        def getRuleIndex(self):
            return equelParser.RULE_queryString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryString" ):
                listener.enterQueryString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryString" ):
                listener.exitQueryString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryString" ):
                return visitor.visitQueryString(self)
            else:
                return visitor.visitChildren(self)




    def queryString(self):

        localctx = equelParser.QueryStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_queryString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.match(equelParser.QueryStringChar)
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==equelParser.QueryStringChar):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FirstExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return equelParser.RULE_firstExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FirstSearchExprContext(FirstExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.FirstExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def searchExpr(self):
            return self.getTypedRuleContext(equelParser.SearchExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirstSearchExpr" ):
                listener.enterFirstSearchExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirstSearchExpr" ):
                listener.exitFirstSearchExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirstSearchExpr" ):
                return visitor.visitFirstSearchExpr(self)
            else:
                return visitor.visitChildren(self)


    class QueryStringExprContext(FirstExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.FirstExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def queryString(self):
            return self.getTypedRuleContext(equelParser.QueryStringContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryStringExpr" ):
                listener.enterQueryStringExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryStringExpr" ):
                listener.exitQueryStringExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryStringExpr" ):
                return visitor.visitQueryStringExpr(self)
            else:
                return visitor.visitChildren(self)



    def firstExpr(self):

        localctx = equelParser.FirstExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_firstExpr)
        try:
            self.state = 93
            token = self._input.LA(1)
            if token in [equelParser.PrefixChar, equelParser.Identifier]:
                localctx = equelParser.FirstSearchExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.searchExpr()

            elif token in [equelParser.QueryStringChar]:
                localctx = equelParser.QueryStringExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.queryString()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilterExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def searchExpr(self):
            return self.getTypedRuleContext(equelParser.SearchExprContext,0)


        def getRuleIndex(self):
            return equelParser.RULE_filterExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterExpr" ):
                listener.enterFilterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterExpr" ):
                listener.exitFilterExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterExpr" ):
                return visitor.visitFilterExpr(self)
            else:
                return visitor.visitChildren(self)




    def filterExpr(self):

        localctx = equelParser.FilterExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_filterExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.searchExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AggregationExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.targetId = None # Token
            self.aggId = None # Token

        def genericExpr(self):
            return self.getTypedRuleContext(equelParser.GenericExprContext,0)


        def AGG(self):
            return self.getToken(equelParser.AGG, 0)

        def AS(self):
            return self.getToken(equelParser.AS, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(equelParser.Identifier)
            else:
                return self.getToken(equelParser.Identifier, i)

        def getRuleIndex(self):
            return equelParser.RULE_aggregationExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregationExpr" ):
                listener.enterAggregationExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregationExpr" ):
                listener.exitAggregationExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregationExpr" ):
                return visitor.visitAggregationExpr(self)
            else:
                return visitor.visitChildren(self)




    def aggregationExpr(self):

        localctx = equelParser.AggregationExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_aggregationExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if _la==equelParser.AGG:
                self.state = 97
                self.match(equelParser.AGG)
                self.state = 98
                localctx.targetId = self.match(equelParser.Identifier)


            self.state = 101
            self.genericExpr()
            self.state = 104
            _la = self._input.LA(1)
            if _la==equelParser.AS:
                self.state = 102
                self.match(equelParser.AS)
                self.state = 103
                localctx.aggId = self.match(equelParser.Identifier)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostprocExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def genericExpr(self):
            return self.getTypedRuleContext(equelParser.GenericExprContext,0)


        def getRuleIndex(self):
            return equelParser.RULE_postprocExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostprocExpr" ):
                listener.enterPostprocExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostprocExpr" ):
                listener.exitPostprocExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostprocExpr" ):
                return visitor.visitPostprocExpr(self)
            else:
                return visitor.visitChildren(self)




    def postprocExpr(self):

        localctx = equelParser.PostprocExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_postprocExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.genericExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.outId = None # Token

        def genericExpr(self):
            return self.getTypedRuleContext(equelParser.GenericExprContext,0)


        def AS(self):
            return self.getToken(equelParser.AS, 0)

        def Identifier(self):
            return self.getToken(equelParser.Identifier, 0)

        def getRuleIndex(self):
            return equelParser.RULE_outputExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputExpr" ):
                listener.enterOutputExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputExpr" ):
                listener.exitOutputExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputExpr" ):
                return visitor.visitOutputExpr(self)
            else:
                return visitor.visitChildren(self)




    def outputExpr(self):

        localctx = equelParser.OutputExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_outputExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.genericExpr()
            self.state = 111
            _la = self._input.LA(1)
            if _la==equelParser.AS:
                self.state = 109
                self.match(equelParser.AS)
                self.state = 110
                localctx.outId = self.match(equelParser.Identifier)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ShortcutExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PrefixChar(self):
            return self.getToken(equelParser.PrefixChar, 0)

        def value(self):
            return self.getTypedRuleContext(equelParser.ValueContext,0)


        def getRuleIndex(self):
            return equelParser.RULE_shortcutExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShortcutExpr" ):
                listener.enterShortcutExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShortcutExpr" ):
                listener.exitShortcutExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortcutExpr" ):
                return visitor.visitShortcutExpr(self)
            else:
                return visitor.visitChildren(self)




    def shortcutExpr(self):

        localctx = equelParser.ShortcutExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_shortcutExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(equelParser.PrefixChar)
            self.state = 114
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return equelParser.RULE_parameter

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SingleParamContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.ParameterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(equelParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleParam" ):
                listener.enterSingleParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleParam" ):
                listener.exitSingleParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleParam" ):
                return visitor.visitSingleParam(self)
            else:
                return visitor.visitChildren(self)


    class UnnamedListContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.ParameterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LParL(self):
            return self.getToken(equelParser.LParL, 0)
        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.ValueContext)
            else:
                return self.getTypedRuleContext(equelParser.ValueContext,i)

        def RParL(self):
            return self.getToken(equelParser.RParL, 0)
        def LSep(self, i:int=None):
            if i is None:
                return self.getTokens(equelParser.LSep)
            else:
                return self.getToken(equelParser.LSep, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnnamedList" ):
                listener.enterUnnamedList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnnamedList" ):
                listener.exitUnnamedList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnnamedList" ):
                return visitor.visitUnnamedList(self)
            else:
                return visitor.visitChildren(self)


    class KVParamContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.ParameterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(equelParser.NameContext,0)

        def Equals(self):
            return self.getToken(equelParser.Equals, 0)
        def value(self):
            return self.getTypedRuleContext(equelParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKVParam" ):
                listener.enterKVParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKVParam" ):
                listener.exitKVParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKVParam" ):
                return visitor.visitKVParam(self)
            else:
                return visitor.visitChildren(self)



    def parameter(self):

        localctx = equelParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.state = 132
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                localctx = equelParser.KVParamContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.name()
                self.state = 117
                self.match(equelParser.Equals)
                self.state = 118
                self.value()
                pass

            elif la_ == 2:
                localctx = equelParser.UnnamedListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(equelParser.LParL)
                self.state = 121
                self.value()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==equelParser.LSep:
                    self.state = 122
                    self.match(equelParser.LSep)
                    self.state = 123
                    self.value()
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 129
                self.match(equelParser.RParL)
                pass

            elif la_ == 3:
                localctx = equelParser.SingleParamContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.match(equelParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(equelParser.Identifier, 0)

        def getRuleIndex(self):
            return equelParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = equelParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(equelParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return equelParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SimpleUQValueContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UnquotedValue(self):
            return self.getToken(equelParser.UnquotedValue, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleUQValue" ):
                listener.enterSimpleUQValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleUQValue" ):
                listener.exitSimpleUQValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleUQValue" ):
                return visitor.visitSimpleUQValue(self)
            else:
                return visitor.visitChildren(self)


    class ValueListContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a equelParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LParL(self):
            return self.getToken(equelParser.LParL, 0)
        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(equelParser.ValueContext)
            else:
                return self.getTypedRuleContext(equelParser.ValueContext,i)

        def RParL(self):
            return self.getToken(equelParser.RParL, 0)
        def LSep(self, i:int=None):
            if i is None:
                return self.getTokens(equelParser.LSep)
            else:
                return self.getToken(equelParser.LSep, i)
